--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   dio: ^5.7.0
   lottie: ^3.1.2
   google_fonts: ^6.2.1
+  flutter_tts: ^4.0.2
 
 dev_dependencies:
   flutter_test:
